# deploy-on-onto-ns

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci_automerge.yml  ci_check_dependencies.yaml
deploy_on_onto_ns/: __init__.py  logger.py  main.py  models.py  uvicorn.py
deployment_scripts/: deploy_services.yml
